--- a/style/style.css
+++ b/style/style.css
@@ -94,15 +94,16 @@ ul {
   gap: 150px;
 }
 
-/* ----------------------------------------- GLOBAL BODY ----------------------------------------- */
-
 #intro p {
   text-align: center;
 }
 
+/* ----------------------------------------- GLOBAL BODY ----------------------------------------- */
+
 #features,
 #contact,
-#social {
+#social,
+#accordionExample {
   margin-bottom: 100px;
   margin-top: 100px;
 }
@@ -268,7 +269,7 @@ ul {
   margin-right: 1em;
 }
 
-/* ---------------- companias --------------------------------------------------------------- */
+/* ---------------- COMPANIAS --------------------------------------------------------------- */
 #titulo-companias {
   color: var(--color-darkgray);
   text-align: center;
@@ -395,14 +396,17 @@ div .light-box {
 /* -------------------------- FOOTER Centro Pescar "Paths to the Future" ------------------------------ */
 
 #foot {
+  display: flex;
+  justify-content: center;
+  padding-top: 14px;
+  height: 50px;
   background-color: var(--color-orange1);
-  padding-block: 15px;
-  text-align: center;
 }
 
 /* -------------------------------------- MOVÍL RESPONSIVE 800px -------------------------------------- */
 @media (max-width: 800px) {
   .menu-btn {
+    color: var(--color-blue);
     display: block;
   }
 
@@ -411,13 +415,22 @@ div .light-box {
     opacity: 0.5;
   }
 
+  .nav-bar ul li a {
+    color: var(--color-white);
+  }
+
+  .nav-bar ul li a:hover {
+    border-bottom: 3px solid var(--color-orange1);
+    color: var(--color-orange1);
+  }
+
   /* MEJORO MI NAVEGACION EN EL MENÚ */
   .nav-bar ul.nav-menu {
     display: block;
     position: absolute;
     top: 0;
     left: 0;
-    background: var(--color-black);
+    background: var(--color-blue);
     height: 100%;
     border-right: var(--color-white) 1px solid;
     opacity: 0.9;
@@ -446,3 +459,8 @@ div .light-box {
     gap: 45px;
   }
 }
+
+/********************************************
+STYLE PÁGINA WEB "La Beca"
+*********************************************/
+
