--- a/style/style.css
+++ b/style/style.css
@@ -310,7 +310,7 @@ ul {
 /* CENTRO LA CAJA FUNDACION PESCAR */
 #button-pescar {
   text-align: center;
-  margin: 120px;
+  margin: 120px 0px 120px 0px;
 }
 
 /* CRÉO LOS BORDES DEL BOTÓN */
@@ -414,15 +414,17 @@ div .light-box {
 /* -------------------------- FOOTER Centro Pescar "Paths to the Future" ------------------------------ */
 
 #foot {
-  display: flex;
-  justify-content: center;
-  padding-top: 14px;
-  height: 50px;
+  padding-block: 15px;
+  text-align: center;
   background-color: var(--color-orange1);
 }
 
-/* -------------------------------------- MOVÍL RESPONSIVE 800px -------------------------------------- */
-@media (max-width: 800px) {
+/* -------------------------------------- MOVÍL RESPONSIVE 400px -------------------------------------- */
+@media (max-width: 400px) {
+  .cursor {
+    display: none;
+  }
+
   .menu-btn {
     color: var(--color-blue);
     display: block;
@@ -438,7 +440,7 @@ div .light-box {
   }
 
   .nav-bar ul li a:hover {
-    border-bottom: 3px solid var(--color-orange1);
+    border-bottom: 2px solid var(--color-orange1);
     color: var(--color-orange1);
   }
 
@@ -450,9 +452,9 @@ div .light-box {
     left: 0;
     background: var(--color-blue);
     height: 100%;
+    padding: 20px 0px 0px 10px;
     border-right: var(--color-orange1) 1px solid;
     opacity: 0.9;
-    padding: 25px;
     transform: translateX(-400px);
     transition: transform 0.5s ease-in-out;
   }
@@ -471,6 +473,20 @@ div .light-box {
   /* SEPARO MI LUPA DEL ICONO MENÚ */
   .nav-bar ul.nav-menu-right {
     margin-left: 36rem;
+  }
+
+  .home-icono {
+    display: none;
+  }
+
+  .home-pescador {
+    width: 500px;
+    margin-right: 95px;
+  }
+
+  .experiencias {
+    display: grid;
+    grid-auto-flow: row;
   }
 
   .contact-details {
