Mejoré los comentarios del código

--- a/style/style.css
+++ b/style/style.css
@@ -275,7 +275,7 @@ ul {
   }
 }
 
-/* ----------------- SCROLL FOTOS --------------------------------------------------------------- */
+/* ----------------- EXPERIENCIAS --------------------------------------------------------------- */
 .experiencias {
   display: flex;
 }
