Mejoras en Custom-Cursor

--- a/style/style.css
+++ b/style/style.css
@@ -655,6 +655,7 @@ STYLE Cursor-Custom
   transform: translate(-50%, -50%);
   pointer-events: none;
   transition: width 0.3s, height 0.3s, opacity 0.3s;
+  z-index: 9999;
 }
 
 .cursorinnerhover {
