--- a/style/style.css
+++ b/style/style.css
@@ -1063,6 +1063,10 @@ STYLE Cursor-Custom
     margin-left: -5px;
   }
 
+  #auxiliarFooter {
+    margin-bottom: 34rem;
+  }
+
   .cursor {
     display: none;
   }
