--- a/style/style.css
+++ b/style/style.css
@@ -994,8 +994,388 @@ STYLE Cursor-Custom
   background-color: var(--color-orange1);
 }
 
+/* -------------------------------------- Desarrolladores -------------------------------------- */
+
+/* CONTENEDOR */
+
+.container-page {
+  width: 100%;
+  /* background-color: yellow; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 10px 0;
+}
+
+/* INFORMACION PRINCIPAL */
+
+#information-title {
+  margin: 10px 0;
+  background-color: white;
+}
+
+.first_information-section {
+  width: 95%;
+  /* background-color: aquamarine; */
+}
+
+.second_information-section {
+  width: 95%;
+  /* background-color: coral; */
+  flex-direction: row-reverse;
+}
+
+.first_information-section,
+.second_information-section {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  margin: 10px 10px;
+}
+
+.section-information {
+  width: 500px;
+  /* background-color: gray; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.img-section {
+  width: 600px;
+  height: 400px;
+  background-color: #eee;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.7);
+}
+
+.img-section img {
+  background-repeat: no-repeat;
+  height: 100%;
+  width: 100%;
+}
+
+#title-firstSection,
+#title-secondSection {
+  background-color: white;
+}
+
+.inf-section-p {
+  margin: 10px 0;
+  background-color: white;
+  width: 380px;
+  margin: 40px 0;
+  text-align: center;
+}
+
+#dev-title {
+  background-color: white;
+  margin: 10px 0 20px;
+}
+
+/* SECCION DE DESARROLLADORES */
+
+#developers-section {
+  display: grid;
+  grid-template-areas:
+    "a b c"
+    "d e f"
+    "g g g";
+  justify-content: space-evenly;
+  align-items: center;
+  width: 95%;
+  /* background-color: darkolivegreen; */
+  margin-bottom: 10px;
+}
+
+.developer-card {
+  width: 300px;
+  height: 300px;
+  background-color: #eee;
+  color: white;
+  margin: 10px 0;
+  position: relative;
+  text-align: center;
+}
+
+.developer-card img {
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.centered {
+  height: 300px;
+  width: 300px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: ease-in-out 0.3s;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  color: rgba(255, 255, 255, 0);
+}
+
+/* TRANSPARENCIA DE LA IMAGEN DE NOSOTROS */
+
+.developer-card .centered:hover {
+  background-color: rgba(110, 110, 110, 0.671);
+  color: white;
+}
+
+/* CLASES PARA LA DIVISION DE GRID AREAS */
+
+.areaA {
+  grid-area: a;
+}
+
+.areaB {
+  grid-area: b;
+}
+
+.areaC {
+  grid-area: c;
+}
+
+.areaD {
+  grid-area: d;
+}
+
+.areaE {
+  grid-area: e;
+}
+
+.areaF {
+  grid-area: f;
+}
+
+.areaG {
+  grid-area: g;
+  margin: 10px auto;
+}
+
+/* GRID AREA DE LOS PROYECTOS DE LOS GRUPOS*/
+
+.proyectoA {
+  grid-area: proyectoA;
+}
+
+.proyectoB {
+  grid-area: proyectoB;
+}
+
+.proyectoC {
+  grid-area: proyectoC;
+}
+
+#group-photo-artech {
+  width: 1000px;
+  height: 650px;
+  margin: 15px 0;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+#group-photo-artech img {
+  width: 100%;
+  height: 100%;
+}
+
+/* PROYECTOS DE OTROS GRUPOS */
+
+#other-projects {
+  margin: 20px 0;
+}
+
+.projects {
+  width: 1000px;
+  /* background-color:rgba(173, 173, 173, 0.541); */
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  margin: 10px 0;
+}
+
+.proyecto-mimo,
+.proyecto-skinki,
+.proyecto-maskoteando {
+  width: 240px;
+  height: 300px;
+  margin: 0 20px;
+  border: 5px solid white;
+  box-shadow: -10px -4px 20px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 30px;
+}
+
+.projects-a {
+  width: 100%;
+  height: 100%;
+  border-radius: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  color: white;
+  transition: ease-in-out 0.2s;
+}
+
+.projects-a:hover {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.projects-a-title-logo {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 60%;
+}
+
+.first-separator {
+  height: 2px;
+  width: 75%;
+  background-color: white;
+  margin-bottom: 10px;
+}
+
+.second-separator {
+  height: 2px;
+  width: 100%;
+  background-color: white;
+  margin-top: 10px;
+}
+
+.projects-a-title-logo #mimo-title,
+.projects-a-title-logo #skinki-title,
+.projects-a-title-logo #maskoteando-title {
+  margin-top: 5px;
+  margin-bottom: 20px;
+  font-family: "Calibri";
+  font-size: 1.3rem;
+  border-radius: 5px;
+  padding: 2px 7px;
+}
+
+/* MIMO */
+
+.proyecto-mimo {
+  background-color: #cd7d84;
+}
+
+.projects-a-title-logo #mimo-title {
+  background-color: white;
+  color: #cd7d84;
+}
+
+.projects-a-title-logo #mimo_logo {
+  width: 100px;
+  height: 100px;
+  border-radius: 20px;
+  margin-bottom: 15px;
+}
+
+/* SKINKI */
+
+.proyecto-skinki {
+  background-color: #ded3ca;
+}
+
+.projects-a-title-logo #skinki-title {
+  background-color: white;
+  color: #ded3ca;
+}
+
+.projects-a-title-logo #skinki_logo {
+  width: 100px;
+  height: 100px;
+  border-radius: 20px;
+  margin-bottom: 15px;
+}
+
+/* MASKOTEANDO */
+
+.proyecto-maskoteando {
+  background-color: #ffdc6a;
+}
+
+.projects-a-title-logo #maskoteando-title {
+  background-color: white;
+  color: #ffdc6a;
+}
+
+.projects-a-title-logo #maskoteando_logo {
+  width: 100px;
+  height: 100px;
+  border-radius: 20px;
+  margin-bottom: 15px;
+}
+
+/* FOOTER */
+
+#foot {
+  bottom: 0;
+  width: 100%;
+}
+
 /* -------------------------------------- MOVÍL RESPONSIVE 400px -------------------------------------- */
 @media (max-width: 400px) {
+
+  /* -------------------- Desarrolladores --------------------- */
+  .first_information-section {
+    width: 95%;
+    height: 700px;
+  }
+
+  .second_information-section {
+    width: 95%;
+    height: 700px;
+  }
+
+  .section-information {
+    width: 300px;
+    height: 300px;
+  }
+
+  .img-section {
+    width: 300px;
+    height: 300px;
+  }
+
+  #title-firstSection,
+  #title-secondSection {
+    margin-top: 20px;
+  }
+
+  .inf-section-p {
+    width: 270px;
+    text-align: center;
+  }
+
+  .first_information-section,
+  .second_information-section {
+    margin: 10px 10px;
+  }
+
+  #developers-section {
+    width: 95%;
+  }
+
+  .container-page {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .proyecto-mimo,
+  .proyecto-skinki,
+  .proyecto-maskoteando {
+    width: 230px;
+    height: 230px;
+  }
+
+  /* ------------------- Nuestro Grupo ------------------------- */
   .conteiner-cards {
     display: inline;
     height: 12vh;
