--- a/style/style.css
+++ b/style/style.css
@@ -1343,6 +1343,126 @@ STYLE Cursor-Custom
   margin: auto;
 }
 
+/* RESPONSIVE DE DESARROLLADORES*/
+@media (max-width: 1150px) { /* el valor anterior era 1320 */ 
+  .first_information-section,
+  .second_information-section{
+      width: 95%;
+      display: flex;
+      flex-direction: column;
+  }
+
+  .inf-section-p{
+      margin-bottom: 10px;
+  }
+
+  .section-information,
+  .img-section{
+      margin: 10px 0px;
+      width: 90%;
+  }
+}
+
+@media (max-width: 1100px){
+  #developers-section{
+      display: grid;
+      width: 95%;
+      grid-template-areas: "a b"
+      "c d"
+      "e f"
+      "g g";
+  }
+}
+
+@media (max-width: 1050px){
+  #group-photo-artech{
+      width: 700px;
+      height: 450px;
+  }
+}
+
+@media (max-width: 1000px){
+
+  .projects{
+      display: grid;
+      grid-template-areas: "proyectoA proyectoB"
+      "proyectoC proyectoC"
+  }
+
+  .proyectoC{
+      align-self: center;
+      justify-self: center;
+  }
+
+  .proyecto-mimo,
+  .proyecto-skinki,
+  .proyecto-maskoteando{
+      margin: 10px 0;
+  }
+}
+
+@media (max-width: 770px){
+  #developers-section{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+  }
+
+  #group-photo-artech{
+      width: 500px;
+      height: 350px;
+  }
+
+  .projects{
+      display: flex;
+      flex-direction: column;
+  }
+}
+
+@media (max-width: 600px) {
+
+  #group-photo-artech{
+      width: 330px;
+      height: 240px;
+  }
+
+  .inf-section-p{
+      width: 270px;
+      text-align: center;
+  }
+
+  .section-information{
+      width: 300px;
+  }
+
+  .img-section{
+      width: 300px;
+  }
+
+  .img-section img{
+      width: 300px;
+      height: 300px;
+  }
+
+  #title-firstSection,
+  #title-secondSection{
+      margin-top: 20px;
+  }
+}
+
+@media (max-width: 600px){
+  .img-section{
+      width: 300px;
+      height: 200px;
+  }
+
+  .img-section img{
+      height: 100%;
+      width: 100%;
+  }
+}
+
 /* -------------------------------------- MOVÍL RESPONSIVE 400px -------------------------------------- */
 @media (max-width: 400px) {
   /* --------------------- AGRADECIMIENTOS --------------------- */
