--- a/style/style.css
+++ b/style/style.css
@@ -988,9 +988,11 @@ STYLE Cursor-Custom
   grid-row-start: 1;
   top: 400px;
 }
+
+
 .estudiantes {
   margin-left: -40px;
-
+max-width: 100vw;
   grid-row-start: 4;
   grid-column-start: 1;
   grid-column-end: 5;
