--- a/style/style.css
+++ b/style/style.css
@@ -582,7 +582,7 @@ div .light-box {
 #foot {
   padding-block: 15px;
   text-align: center;
-  background-color: var(--color-orange1);
+  background-color: var(--color-orange2);
 }
 
 /********************************************
@@ -1036,7 +1036,7 @@ STYLE Cursor-Custom
 /* INFORMACION PRINCIPAL */
 
 #information-title {
-  margin: 10px 0;
+  margin: 40px 0;
   background-color: white;
 }
 
@@ -1056,7 +1056,7 @@ STYLE Cursor-Custom
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  margin: 10px 10px;
+  margin: 25px 10px;
 }
 
 .section-information {
@@ -1096,7 +1096,7 @@ STYLE Cursor-Custom
 
 #dev-title {
   background-color: white;
-  margin: 10px 0 20px;
+  margin: 50px 0 20px;
 }
 
 /* SECCION DE DESARROLLADORES */
@@ -1111,7 +1111,7 @@ STYLE Cursor-Custom
   align-items: center;
   width: 95%;
   /* background-color: darkolivegreen; */
-  margin-bottom: 10px;
+  margin-bottom: 40px;
 }
 
 .developer-card {
@@ -1119,7 +1119,7 @@ STYLE Cursor-Custom
   height: 300px;
   background-color: #eee;
   color: white;
-  margin: 10px 0;
+  margin: 35px 40px;
   position: relative;
   text-align: center;
 }
@@ -1199,7 +1199,7 @@ STYLE Cursor-Custom
 
 #group-photo-artech {
   width: 1000px;
-  height: 650px;
+  height: 400px;
   margin: 15px 0;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
@@ -1212,7 +1212,7 @@ STYLE Cursor-Custom
 /* PROYECTOS DE OTROS GRUPOS */
 
 #other-projects {
-  margin: 20px 0;
+  margin: 30px 0;
 }
 
 .projects {
@@ -1221,7 +1221,7 @@ STYLE Cursor-Custom
   display: flex;
   align-items: center;
   justify-content: space-evenly;
-  margin: 10px 0;
+  margin: 10px 0 35px;
 }
 
 .proyecto-mimo,
@@ -1593,14 +1593,20 @@ STYLE Cursor-Custom
   }
 
   /* -------------------- Desarrolladores --------------------- */
+
+  #information-title{
+    margin-bottom: 0;
+  }
+
   .first_information-section {
     width: 95%;
-    height: 700px;
+    height: 600px;
   }
 
   .second_information-section {
     width: 95%;
-    height: 700px;
+    height: 600px;
+    margin-top: 0;
   }
 
   .section-information {
@@ -1625,7 +1631,7 @@ STYLE Cursor-Custom
 
   .first_information-section,
   .second_information-section {
-    margin: 10px 10px;
+    margin: 0px 0px;
   }
 
   #developers-section {
@@ -1635,11 +1641,21 @@ STYLE Cursor-Custom
   .developer-card {
     width: 260px;
     height: 260px;
+    margin: 15px 0;
   }
 
   #group-photo-artech {
     width: 300px;
-    height: 190px;
+    height: 145px;
+    margin-top: 0;
+  }
+
+  #dev-title{
+    margin: 25px 0 25px;
+  }
+
+  #other-projects{
+    text-align: center;
   }
 
   .container-page {
