--- a/style/style.css
+++ b/style/style.css
@@ -845,30 +845,31 @@ STYLE Cursor-Custom
   height: 450px;
   background: #fff;
   border-radius: 20px;
-  box-shadow: 0 35px 80px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 35px 80px rgba(69, 69, 69, 0.15);
   top: 300px;
 }
 
 .imgBx {
-  position: absolute;
-  left: 50%;
-  top: -50px;
+  float: left;
+  margin-top: -50px;
+  margin-left: 50%;
   transform: translateX(-50%);
   width: 200px;
   height: 200px;
-  background: #000;
+  background: rgb(126, 126, 126);
   border-radius: 20px;
-  box-shadow: 0 15px 50px rgba(0, 0, 0, 0.35);
   overflow: hidden;
+  margin-bottom: 100px;
 }
 
 .imgBx img {
   position: absolute;
-  top: 0;
+  top: -100;
   left: 0;
   width: 100%;
   height: 100%;
   object-fit: cover;
+  margin-bottom: 100px;
 }
 
 .card-grupo .content {
@@ -885,7 +886,7 @@ STYLE Cursor-Custom
   padding: 40px;
   text-align: center;
   width: 100%;
-  margin-top: 130px;
+  margin-top: 150px;
 }
 
 .card-grupo .content .details h2 {
@@ -964,7 +965,6 @@ STYLE Cursor-Custom
   justify-content: center;
   align-items: center;
   margin-left: 80px;
-  top: 0rem;
   grid-row-start: 2;
   grid-column-start: 1;
   grid-column-end: 5;
@@ -989,11 +989,9 @@ STYLE Cursor-Custom
   grid-row-start: 1;
   top: 400px;
 }
-
-
 .estudiantes {
   margin-left: -40px;
-max-width: 100vw;
+
   grid-row-start: 4;
   grid-column-start: 1;
   grid-column-end: 5;
@@ -1005,10 +1003,6 @@ max-width: 100vw;
 
 .estudiantesCard {
   top: 500px;
-}
-
-.imgBx {
-  top: 0px;
 }
 
 #auxiliarFooter {
