--- a/style/style.css
+++ b/style/style.css
@@ -1382,6 +1382,10 @@ STYLE Cursor-Custom
   #ci-requisitos {
     margin: 40px 400px 40px 40px;
   }
+
+  #ci-preguntas { 
+    width: 30%;
+  }
 }
 
 #ci-requisitos h2 {
@@ -1392,6 +1396,8 @@ STYLE Cursor-Custom
 #ci-requisitos h4 {
   margin: 50px 0;
 }
+
+
 
 /* -------------------------------------- MOVÍL RESPONSIVE 400px -------------------------------------- */
 @media (max-width: 400px) {
