--- a/style/style.css
+++ b/style/style.css
@@ -645,6 +645,7 @@ STYLE LaBeca
 .accordionTitle {
   background-color: var(--color-blue);
   border-bottom: 1px solid var(--color-box-shadow);
+  background-color: rgb(107, 107, 253);
 }
 .accordionTitle:before {
   content: "+";
